<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.activity.HasilDeteksiActivity">

    <ImageView
        android:id="@+id/iv_hasil_deteksi"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:scaleType="centerCrop"
        android:src="@drawable/onboarding2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/tv_back_hasil_deteksi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="22dp"
        android:scaleType="fitCenter"
        android:background="@drawable/btn_back_background"
        android:padding="10dp"
        android:src="@drawable/baseline_arrow_back_ios_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_checkyai_hasil_deteksi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:backgroundTint="@color/accent_sophisticated_citrus"
        android:padding="12dp"
        android:text="@string/tanya_checkyai"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_hasil_deteksi" />

    <TextView
        android:id="@+id/tv_hasil_deteksi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:textColor="@color/text_tropical_gradient"
        android:text="@string/hasil_deteksi"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_hasil_deteksi" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_hasil_deteksi"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_hasil_deteksi"
        tools:listitem="@layout/item_hasil_deteksi" />

    <TextView
        android:id="@+id/tv_resep_hasil_deteksi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:text="@string/resep_kegunaan"
        android:textColor="@color/text_tropical_gradient"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rv_hasil_deteksi" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_resep_hasil_deteksi"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_resep_hasil_deteksi" />

</androidx.constraintlayout.widget.ConstraintLayout>